(rule
  (targets syscall_utils.ml)
  (deps (:gen ../gen/gen_syscall_utils.exe))
  (action (run %{gen} %{targets}))
  )

(library
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32-30-45-70@6@8"))
 (public_name stramon-lib)
 (name stramon_lib)
 (libraries fmt
            seq
            unix
            containers
            angstrom
            )
)
